fix; header items alignment on rtl direction

--- a/src/components/layout/Header/styles.module.scss
+++ b/src/components/layout/Header/styles.module.scss
@@ -8,6 +8,6 @@
   gap: 15px;
 
   & > :first-child {
-    margin-right: auto;
+    margin-inline-end: auto;
   }
 }
